# src/main/java/com/hoang/keyloop/controller/dto/VehicleResponse.java
@@ -25,4 +25,5 @@ public class VehicleResponse {
     private LocalDateTime createdAt;
     private String updatedBy;
     private LocalDateTime updatedAt;
+    private Boolean isAging;
 }
